# cmake_template_project

./: CMakeLists.txt  LICENSE  README.md
include/: config.hpp.in
include/Math/: Addition.hpp  Subtraction.hpp
include/Transform/: Transform.hpp
src/: CMakeLists.txt
src/Hello/: CMakeLists.txt  Hello.cpp
src/Math/: Addition.cpp  CMakeLists.txt  Subtraction.cpp
src/Transform/: CMakeLists.txt
src/Transform/src/: Transform.cpp
